[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-kinthai"
version = "1.0.0"
description = "KinthAI integration for Hermes Agent"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "PyYAML>=6.0",
]

[project.scripts]
hermes-kinthai = "hermes_kinthai.cli:main"

[project.entry-points."hermes_agent.plugins"]
kinthai = "hermes_kinthai.adapter:register"

[project.urls]
Homepage = "https://kinthai.ai"
Repository = "https://github.com/kinthaiofficial/hermes-kinthai"
